<resources>
    <string name="app_name">My Application</string>
    <string name="login_title">智能聊天管理APP</string>
    <string name="logup">LogUp</string>
    <string name="e_mail">电子邮件地址</string>
    <string name="password">密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登陆</string>
    <string name="logup_ent">用户注册</string>
    <string name="password_input">输入密码</string>
    <string name="password_input_again">再次输入密码</string>
    <string name="nicky_name">昵称</string>
    <string name="submit">提交</string>
    <string name="cloudspace">网盘</string>
    <string name="user">用户中心</string>
    <string name="map">地图</string>
    <string name="music">音乐</string>
</resources>
