<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="160dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/e_mail"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            tools:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/auto_login"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_login"
            android:textCursorDrawable="@color/colorAccent" />

        <CheckBox
            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textCursorDrawable="@color/colorAccent" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/logup_ent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="40dp"
        android:text="@string/logup_ent" />

</LinearLayout>