<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CloudspaceActivity">

    <LinearLayout
        android:id="@+id/content0"
        android:layout_width="match_parent"
        android:layout_height="672dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/testImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="34dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/guide0"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:text="@string/music"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/guide1"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:text="@string/map"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/guide2"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/cloudspace"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/guide3"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:text="@string/user"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
