<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SigninActivity">

    <TextView
        android:id="@+id/logup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="80dp"
        android:text="@string/logup_ent"
        android:textSize="24sp"
        tools:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nicky_name" />

                <EditText
                    android:id="@+id/nickyName"
                    android:layout_width="304dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                android:id="@+id/tip0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail" />

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="304dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <TextView
                android:id="@+id/tip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/password_input" />

            <EditText
                android:id="@+id/pw0"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/password_input_again" />

            <EditText
                android:id="@+id/pw1"
                android:layout_width="304dp"
                android:layout_height="57dp"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:id="@+id/tip2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/logupSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/submit"
        android:textColor="@android:color/background_light" />

</LinearLayout>
